--- a/nav.css
+++ b/nav.css
@@ -7,6 +7,8 @@ body {
   background-color: #eee;
   font-family: 'Source Sans Pro', sans-serif;
 }
+
+
 /*navbar*/
 #intro1{
   background:url("bck1.jpg");
@@ -321,9 +323,21 @@ input:focus {
   border: 3px solid #555;
 }
 input[type=submit]{
+  background-color:#f7fcfe;
+  border-color: black;
   font-weight: bold;
+  font-family:'Source Sans Pro', sans-serif;
+
 }
+input[type=submit]:hover{
+color: white;
+  font-weight: bold;
+  background: black;
+  }
+
+
 #feedback{
 height: 280px;
 width: 95%;
 }
+
